infra/k8s/baremetal/gitops/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cets
  labels:
    app.kubernetes.io/part-of: cets
    cets.io/track: baremetal
